--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -18,7 +18,7 @@ passlib[bcrypt]==1.7.4
 python-dotenv==1.0.0
 
 # HTTP Client
-httpx==0.26.0
+httpx==0.25.2
 
 # Data Processing
 pandas==2.2.0
@@ -53,3 +53,4 @@ pytest-asyncio==0.23.3
 # Utilities
 pydantic==2.5.3
 pydantic-settings==2.1.0
+email-validator==2.1.0
