--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -4,15 +4,15 @@ nixPkgs = ["python311", "gcc", "postgresql"]
 [phases.install]
 cmds = [
   "cd backend",
-  "pip install --upgrade pip",
-  "pip install -r requirements.txt"
+  "python -m pip install --upgrade pip",
+  "python -m pip install -r requirements.txt"
 ]
 
 [phases.build]
 cmds = ["cd backend && echo 'Build phase complete'"]
 
 [start]
-cmd = "cd backend && uvicorn app.main:app --host 0.0.0.0 --port $PORT"
+cmd = "cd backend && python -m uvicorn app.main:app --host 0.0.0.0 --port $PORT"
 
 [variables]
 PYTHONUNBUFFERED = "1"
