--- a/railway.toml
+++ b/railway.toml
@@ -1,10 +1,9 @@
 [build]
 builder = "dockerfile"
 dockerfilePath = "backend/Dockerfile"
-dockerContext = "backend"
 
 [deploy]
-startCommand = "uvicorn app.main:app --host 0.0.0.0 --port $PORT"
+startCommand = "cd backend && uvicorn app.main:app --host 0.0.0.0 --port $PORT"
 healthcheckPath = "/health"
 healthcheckTimeout = 100
 restartPolicyType = "ON_FAILURE"
